--- a/returns_to_education/slides/main.tex
+++ b/returns_to_education/slides/main.tex
@@ -356,7 +356,7 @@ In common usage, the coefficient on schooling in a regression of log earnings on
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}
-\textbf{Income Maximization under Perfect Certainty \citep{Rosen.1977,Willis.1986}}
+\textbf{Income Maximization under Perfect Certainty \nocite{Rosen.1977,Willis.1986}}
 \begin{align*}
 s               &\qquad\text{schooling level} \\
 x               &\qquad\text{experience level} \\
