update main file for slides

--- a/overview_generalized_roy/slides/main.tex
+++ b/overview_generalized_roy/slides/main.tex
@@ -121,7 +121,7 @@ Y_1 - Y_0 / D\quad \mid X = x.
 \begin{frame}
 \begin{figure}[htp]\centering
 	\caption{Conditional Expectation of Observed Outcome}\label{eh-Conditional Expectation}
-	\scalebox{0.35}{\includegraphics{./material/fig-eh-conditional-expectation.png}}
+	\scalebox{0.35}{\includegraphics{.././material/fig-eh-conditional-expectation.png}}
 \end{figure}
 \end{frame}
 
@@ -159,7 +159,7 @@ E[Y\mid D = 1] - E[Y\mid D = 0] & = \underbrace{E[Y_1 - Y_0\mid D = 1]}_{B^{TT}}
 \begin{frame}
 \begin{figure}[htp]\centering
 	\caption{Treatment Effects with Essential Heterogeneity}\label{Treatment Effects Conventional}			
-	\scalebox{0.35}{\includegraphics{./material/fig-treatment-effects-conventional.png}}
+	\scalebox{0.35}{\includegraphics{.././material/fig-treatment-effects-conventional.png}}
 \end{figure}
 \end{frame}
 
@@ -167,7 +167,7 @@ E[Y\mid D = 1] - E[Y\mid D = 0] & = \underbrace{E[Y_1 - Y_0\mid D = 1]}_{B^{TT}}
 \begin{frame}
 \begin{figure}[htp]\centering
 	\caption{Treatment Effects without Essential Heterogeneity}\label{Treatment Effects Without Essential Heterogeneity}
-	\scalebox{0.35}{\includegraphics{./material/fig-treatment-effects-without-eh.png}}
+	\scalebox{0.35}{\includegraphics{.././material/fig-treatment-effects-without-eh.png}}
 \end{figure}
 \end{frame}
 
@@ -198,7 +198,7 @@ B^{MTE}(x, u_S) = E [Y_1 - Y_0 \mid X = x, U_S = u_S]
 \begin{frame}
 \begin{figure}[htp]\centering
 	\caption{Margin of Indifference}\label{Margin Indifference}
-	\scalebox{0.35}{\includegraphics{./material/fig-margin-indifference.png}}
+	\scalebox{0.35}{\includegraphics{.././material/fig-margin-indifference.png}}
 \end{figure}
 \end{frame}
 
@@ -206,7 +206,7 @@ B^{MTE}(x, u_S) = E [Y_1 - Y_0 \mid X = x, U_S = u_S]
 \begin{frame}
 \begin{figure}[htp]\centering
 	\caption{Marginal Effect of Treatment}\label{Marginal Effect of Heterogeneity}
-	\scalebox{0.35}{\includegraphics{./material/fig-eh-marginal-effect.png}}
+	\scalebox{0.35}{\includegraphics{.././material/fig-eh-marginal-effect.png}}
 \end{figure}
 \end{frame}
 
@@ -236,7 +236,7 @@ and integrate to one.
 \begin{frame}
 \begin{figure}[htp]\centering
 	\caption{Treatment Effect Weights}\label{Effects of Treatment as Weighted Averages}
-	\scalebox{0.35}{\includegraphics{./material/fig-weights-marginal-effect.png}}
+	\scalebox{0.35}{\includegraphics{.././material/fig-weights-marginal-effect.png}}
 \end{figure}
 \end{frame}
 
@@ -266,7 +266,7 @@ B^{LATE}(x, u_S, u_{S^\prime}) = \frac{1}{u_S - u_{S^\prime}} \int_{u_S}^{u_{S^\
 \begin{frame}
 \begin{figure}[htp]\centering
 	\caption{Local Average Treatment Effect}\label{Local Average Treatment}
-	\scalebox{0.35}{\includegraphics{./material/fig-local-average-treatment.png}}
+	\scalebox{0.35}{\includegraphics{.././material/fig-local-average-treatment.png}}
 \end{figure}
 \end{frame} 
  
@@ -283,24 +283,24 @@ B^{LATE}(x, u_S, u_{S^\prime}) = \frac{1}{u_S - u_{S^\prime}} \int_{u_S}^{u_{S^\
 
 \begin{frame}
 \begin{figure}[htp]\centering
-	\caption{Marginal Distribution of Benefits}\label{Treatment Effects Benefits}
-	\scalebox{0.35}{\includegraphics{./material/fig-treatment-effects-benefits.png}}
+	\caption{Marginal Distribution of Benefits}\label{Treatment Effects Benefits Marginal}
+	\scalebox{0.35}{\includegraphics{.././material/fig-treatment-effects-benefits.png}}
 \end{figure}
 \end{frame}
 
 
 \begin{frame}
 \begin{figure}[htp]\centering
-	\caption{Joint Distribution of Potential Outcomes}\label{Treatment Effects Benefits}
-	\scalebox{0.80}{\includegraphics{./material/fig-distribution-potential.png}}
+	\caption{Joint Distribution of Potential Outcomes}\label{Treatment Effects Benefits Potential}
+	\scalebox{0.80}{\includegraphics{.././material/fig-distribution-potential.png}}
 \end{figure}
 \end{frame}
 
 
 \begin{frame}
 \begin{figure}[htp]\centering
-	\caption{Joint Distribution of Surplus and Benefits}\label{Treatment Effects Benefits}
-	\scalebox{0.80}{\includegraphics{./material/fig-distribution-surplus.png}}
+	\caption{Joint Distribution of Surplus and Benefits}\label{Treatment Effects Benefits Surplus}
+	\scalebox{0.80}{\includegraphics{.././material/fig-distribution-surplus.png}}
 \end{figure}
 \end{frame}
 
@@ -308,7 +308,7 @@ B^{LATE}(x, u_S, u_{S^\prime}) = \frac{1}{u_S - u_{S^\prime}} \int_{u_S}^{u_{S^\
 \begin{frame}
 \frametitle{Teaching Tool}
 \begin{figure}[htp]\centering
-	\includegraphics[width=\textwidth]{./material/fig-online-documentation.png}
+	\includegraphics[width=\textwidth]{.././material/fig-online-documentation.png}
 \end{figure}
 \end{frame}
 
@@ -335,10 +335,10 @@ B^{LATE}(x, u_S, u_{S^\prime}) = \frac{1}{u_S - u_{S^\prime}} \int_{u_S}^{u_{S^\
 \newgeometry{margin=1cm}
 \begin{frame}[allowframebreaks]\frametitle{}
 
-\nocite{Abbring.2007,Carneiro.2003,Carneiro.2011,Heckman.2001g,Heckman.2008a,Heckman.1997,Heckman.2006d,Heckman.2001d,Heckman.2001e,Heckman.2005e,Heckman.2007e,Heckman.2007f,Roy.1951}
+\nocite{Abbring.2007, Carneiro.2003, Carneiro.2011, Heckman.2001g, Heckman.2008a, Heckman.1997, Heckman.2006d, Heckman.2001d, Heckman.2001e, Heckman.2005e, Heckman.2007e, Heckman.2007f, Roy.1951}
 
 \bibliographystyle{apalike}
-\bibliography{../submodules/bibliography/literature}
+\bibliography{../../submodules/bibliography/literature}
 %\bibliography{../../../submodules/bibliography/literature}
 
 \end{frame}
