--- a/seminal_papers/Heckman_al_2010/slides/main.tex
+++ b/seminal_papers/Heckman_al_2010/slides/main.tex
@@ -1,54 +1,15 @@
-\input{header}
+\input{files/header}
 
-\title{The rate of return to the HighScope Perry Preschool Program}
-\author{James J. Heckman, Seong Hyeok Moon, Rodrigo Pinto, Peter A. Savelyev, Adam Yavitz}
-
-\date{}
-
-\let\otp\titlepage
+\input{files/s-title}
 
 \begin{document}
-\maketitle
 
- \begin{frame}
-\begin{quote}\small
-This paper estimates the rate of return to the HighScope Perry Preschool Program, an early intervention
-program targeted toward disadvantaged African-American youth. Estimates of the rate of return to the Perry
-program are widely cited to support the claim of substantial economic benefits from preschool education
-programs. Previous studies of the rate of return to this program ignore the compromises that occurred in the
-randomization protocol. They do not report standard errors. The rates of return estimated in this paper
-account for these factors. We conduct an extensive analysis of sensitivity to alternative plausible
-assumptions. Estimated annual social rates of return generally fall between 7 and 10\%, with most estimates
-substantially lower than those previously reported in the literature. However, returns are generally
-statistically significantly different from zero for both males and females and are above the historical return
-on equity. Estimated benefit-to-cost ratios support this conclusion.
-\end{quote}
- \end{frame}
+\input{files/s-titlepage}
 
+\input{files/s-randomization}
 
-%!TEX root = ../main.tex
-\beginbackup\appendix
-\begin{frame}\begin{center}
-\LARGE\textbf{Appendix}
-\end{center}\end{frame}
+\input{files/s-paper}
 
-%------------------------------------------------------------------------------
-%------------------------------------------------------------------------------
-\begin{frame}\begin{center}
-\LARGE\textit{References}
-\end{center}\end{frame}
-%------------------------------------------------------------------------------
-%------------------------------------------------------------------------------
-\newgeometry{margin=1cm}
-\begin{frame}[allowframebreaks]\frametitle{}
+\input{files/s-appendix}
 
-\nocite{Carneiro.2011}
-
-\bibliographystyle{apalike}
-\bibliography{../../../submodules/bibliography/literature}
-
-
-\end{frame}
-
-\backupend
 \end{document}
