--- a/seminal_papers/Heckman_al_2010/slides/files/s-randomization.tex
+++ b/seminal_papers/Heckman_al_2010/slides/files/s-randomization.tex
@@ -88,3 +88,23 @@ See \citet{Banerjee.2017} for a discussion of these challenges and their attempt
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
+\begin{frame}\textbf{The Abdul Latif Jameel Poverty Action Lab}\vspace{0.3cm}
+
+\begin{quote} The Abdul Latif Jameel Poverty Action Lab (J-PAL) is a network of 158 affiliated professors from 51 universities. Our mission is to reduce poverty by ensuring that policy is informed by scientific evidence. We do this through research, policy outreach, and training across six regional offices worldwide.\\\vspace{0.3cm}
+\end{quote}
+
+
+See their \href{https://www.povertyactionlab.org}{website} for an impressive amount of resources for running experiments.
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
+\begin{frame}
+\begin{figure}
+\caption{Book Recommendations}
+\centering
+	\subfloat[]{\includegraphics[width=0.40\linewidth]{fig-poor-economics}} \hspace{25pt}
+	\subfloat[]{\includegraphics[width=0.40\linewidth]{fig-tyranny}}
+\end{figure}
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
