further edits for the day

--- a/seminal_papers/Heckman_al_2010/slides/files/s-housekeeping.tex
+++ b/seminal_papers/Heckman_al_2010/slides/files/s-housekeeping.tex
@@ -7,8 +7,8 @@
 
 \begin{itemize}\setlength\itemsep{0.5em}
 \item \bibentry{Heckman.2010j}
-{\scriptsize\item \bibentry{Blattman.2017}
-\item \bibentry{Kosse.2016}}
+\item \bibentry{Blattman.2017}
+\item \bibentry{Kosse.2016}
 \end{itemize}
 
 \end{frame}
