--- a/seminal_papers/Heckman_al_2010/slides/files/s-paper.tex
+++ b/seminal_papers/Heckman_al_2010/slides/files/s-paper.tex
@@ -65,7 +65,35 @@ Part of a whole sequence ...
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
-\begin{frame}\begin{figure}
+\begin{frame}\begin{figure}\caption{Descriptive Statistics}
+\scalebox{0.75}{\includegraphics{fig-table-2}}
+\end{figure}\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
+\begin{frame}\textbf{Program Costs and Benefits}
+\begin{itemize}
+\item Cost
+\begin{itemize}
+\item Initial Program Costs
+\end{itemize}
+\item Benefits
+\begin{itemize}
+\item Education
+\item Employment and Earnings
+\item Criminal Activity
+\item Tax Payments
+\item Welfare System
+\end{itemize}
+\end{itemize}
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
+\begin{frame}\begin{figure}\caption{Summary of Lifetime Costs and Benefits}
+\scalebox{0.75}{\includegraphics{fig-table-3}}
+\end{figure}\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
+\begin{frame}\begin{figure}\caption{Main Results}
 \scalebox{0.75}{\includegraphics{fig-table-1}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
