--- a/seminal_papers/Heckman_al_2010/slides/files/s-title.tex
+++ b/seminal_papers/Heckman_al_2010/slides/files/s-title.tex
@@ -1,6 +1,6 @@
 
 \title{The rate of return to the HighScope Perry Preschool Program}
-\author{James J. Heckman, Seong Hyeok Moon, Rodrigo Pinto, Peter A. Savelyev, Adam Yavitz}
+\author{Heckman, J. J., Moon, S. H., Pinto, R., Savelyev, P., and Yavitz, A.}
 
 \date{}
 
