--- a/seminal_papers/Heckman_al_2010/slides/files/s-housekeeping.tex
+++ b/seminal_papers/Heckman_al_2010/slides/files/s-housekeeping.tex
@@ -5,11 +5,16 @@
 %-------------------------------------------------------------------------------
 \begin{frame}\textbf{Research Papers}
 
-\begin{itemize}\setlength\itemsep{0.5em}
+
+\begin{itemize}
 \item \bibentry{Heckman.2010j}
+\end{itemize}
+
+{\scriptsize\begin{itemize}\setlength\itemsep{0.5em}
 \item \bibentry{Blattman.2017}
 \item \bibentry{Kosse.2016}
-\end{itemize}
+\end{itemize}}
+
 
 \end{frame}
 %-------------------------------------------------------------------------------
