modified slide with Obama quote

--- a/seminal_papers/Heckman_al_2010/slides/files/s-paper.tex
+++ b/seminal_papers/Heckman_al_2010/slides/files/s-paper.tex
@@ -106,7 +106,8 @@ Part of a whole sequence ...
 \begin{frame}
 \begin{quote}\Large
 Every dollar we invest in high-quality early childhood education can save more than seven dollars later on -- by boosting graduation rates, reducing teen pregnancy, even reducing violent crime.
-\end{quote}
+\end{quote}\vspace{-0.5cm}\hspace{6cm} - Barack Obama (2013)
+\nocite{Obama.2013, CEA.2015}
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
