--- a/intro_data_analytics/slides/main.tex
+++ b/intro_data_analytics/slides/main.tex
@@ -31,7 +31,7 @@
 \begin{frame}[c]
 \begin{figure}[tb]
     \centering
-    \includegraphics[width=0.8\textwidth, height=0.8\textheight]{material/fig-python-growth}
+    \includegraphics[width=0.8\textwidth, height=0.8\textheight]{../material/fig-python-growth}
     \caption{source: \url{https://stackoverflow.blog/2017/09/06/incredible-growth-python/}}
     \label{fig:python-growth}
 \end{figure}
@@ -40,7 +40,7 @@
 \begin{frame}[c]
 \begin{figure}[tb]
     \centering
-    \includegraphics[width=0.8\textwidth, height=0.8\textheight]{material/fig-pandas-growth}
+    \includegraphics[width=0.8\textwidth, height=0.8\textheight]{../material/fig-pandas-growth}
     \caption{source: \url{https://stackoverflow.blog/2017/09/14/python-growing-quickly/}}
     \label{fig:pandas-growth}
 \end{figure}
@@ -49,7 +49,7 @@
 \begin{frame}[c]
 \begin{figure}[tb]
     \centering
-    \includegraphics[width=0.8\textwidth, height=0.8\textheight]{material/fig-pandas-visitors-by-industry}
+    \includegraphics[width=0.8\textwidth, height=0.8\textheight]{../material/fig-pandas-visitors-by-industry}
     \caption{source: \url{https://stackoverflow.blog/2017/09/14/python-growing-quickly/}}
     \label{fig:figure1}
 \end{figure}
