--- a/seminal_papers/01_Carneiro_al_2011/main.tex
+++ b/seminal_papers/01_Carneiro_al_2011/main.tex
@@ -1,4 +1,4 @@
-\input{../../material/header}
+\input{../../shared/header}
 
 %!TEX root = ../main.tex
 \title{Estimating Marginal Returns to Education}
